--- a/automation_cleansing.ipynb
+++ b/automation_cleansing.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project we are going to talk about automation in the Data Cleansing process. Data cleansing (or data cleaning) is defined in Wikipedia as:\n",
+    "In this tutorial we are going to talk about automation in the Data Cleansing process. Data cleansing (or data cleaning) is defined in Wikipedia as:\n",
     "\n",
     ">The process of detecting and correcting (or removing) corrupt or inaccurate records from a record set, table, or database and refers to identifying incomplete, incorrect, inaccurate or irrelevant parts of the data and then replacing, modifying, or deleting the dirty or coarse data.  \n",
     "\n",
